--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="tip">请选择</string>
-	<string name="app_name">金融计算器</string>
+	<string name="app_name">市场先生期权版</string>
 </resources>
